--- a/platform/themes/shofy/assets/sass/layout/ecommerce/_product.scss
+++ b/platform/themes/shofy/assets/sass/layout/ecommerce/_product.scss
@@ -515,6 +515,7 @@
         &-thumb {
             flex: 0 0 auto;
             border: 1px solid #e0e2e3;
+            background-color: #f8f8f8;
 
             @media (min-width: 991px) {
                 width: 300px;
@@ -522,14 +523,18 @@
             }
 
             & a {
-                display: block;
+                display: flex;
+                align-items: center;
+                justify-content: center;
                 width: 100%;
                 height: 100%;
 
                 & img {
-                    width: 100%;
-                    height: 100%;
-                    object-fit: cover;
+                    width: auto;
+                    height: auto;
+                    max-width: 100%;
+                    max-height: 100%;
+                    object-fit: contain;
                     @extend %tp-transition;
                 }
             }
